--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ canvas {
 #tools {
   display: flex;
   gap: 10px;
-  margin-top: 10px;
+  margin: 10px;
 }
 
 button {
@@ -55,4 +55,18 @@ button:hover {
 
 #clearButton:hover {
   background-color: #cc0000;
+}
+
+#exportButton {
+  padding: 10px 20px;
+  background-color: #00e64d;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  font-size: 16px;
+}
+
+#exportButton:hover {
+  background-color: #00802b;
 }
