--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,13 @@ body {
 #appTitle {
   font-size: 32px;
   color: #333;
-  margin-bottom: 10px;
+  margin-bottom: -10px;
+}
+
+#subTitle {
+  font-size: 12px;
+  color: #444;
+  margin-bottom: 15px;
 }
 
 canvas {
